@@ -43,6 +43,7 @@ import javax.xml.parsers.ParserConfigurationException;
 import org.dcm4che3.data.Attributes;
 import org.dcm4che3.data.ElementDictionary;
 import org.dcm4che3.data.Tag;
+import org.dcm4che3.data.VR;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.w3c.dom.Document;
@@ -56,17 +57,17 @@ import org.weasis.core.api.command.Options;
 import org.weasis.core.api.explorer.ObservableEvent;
 import org.weasis.core.api.gui.util.GuiExecutor;
 import org.weasis.core.api.gui.util.GuiUtils;
+import org.weasis.core.api.gui.util.WinUtil;
 import org.weasis.core.api.media.MimeInspector;
 import org.weasis.core.api.media.data.ImageElement;
 import org.weasis.core.api.media.data.MediaElement;
 import org.weasis.core.api.media.data.TagW;
 import org.weasis.core.api.media.data.Taggable;
-import org.weasis.core.api.service.BundleTools;
+import org.weasis.core.api.service.WProperties;
 import org.weasis.core.api.util.ClosableURLConnection;
 import org.weasis.core.api.util.GzipManager;
 import org.weasis.core.api.util.NetworkUtil;
 import org.weasis.core.api.util.URLParameters;
-import org.weasis.core.ui.docking.UIManager;
 import org.weasis.core.ui.editor.image.ViewCanvas;
 import org.weasis.core.ui.model.GraphicModel;
 import org.weasis.core.ui.model.layer.GraphicLayer;
@@ -432,20 +433,19 @@ public class AcquireManager {
   }
 
   private static void showWorklist() {
-    String host = BundleTools.SYSTEM_PREFERENCES.getProperty("weasis.acquire.wkl.host");
-    String aet = BundleTools.SYSTEM_PREFERENCES.getProperty("weasis.acquire.wkl.aet");
-    String port = BundleTools.SYSTEM_PREFERENCES.getProperty("weasis.acquire.wkl.port");
+    WProperties preferences = GuiUtils.getUICore().getSystemPreferences();
+    String host = preferences.getProperty("weasis.acquire.wkl.host");
+    String aet = preferences.getProperty("weasis.acquire.wkl.aet");
+    String port = preferences.getProperty("weasis.acquire.wkl.port");
     if (StringUtil.hasText(aet) && StringUtil.hasText(host) && StringUtil.hasText(port)) {
       DicomNode called = new DicomNode(aet, host, Integer.parseInt(port));
       DicomNode calling =
-          new DicomNode(
-              BundleTools.SYSTEM_PREFERENCES.getProperty(
-                  "weasis.acquire.wkl.station.aet", "WEASIS-WL"));
+          new DicomNode(preferences.getProperty("weasis.acquire.wkl.station.aet", "WEASIS-WL"));
 
       try {
         WorklistDialog dialog =
             new WorklistDialog(
-                UIManager.getApplicationWindow(),
+                GuiUtils.getUICore().getApplicationWindow(),
                 Messages.getString("AcquireManager.dcm_worklist"),
                 calling,
                 called);
@@ -477,19 +477,19 @@ public class AcquireManager {
     final Option opt = Options.compile(usage).parse(argv);
     final List<String> args = opt.args();
 
-    if (opt.isSet("help") || args.isEmpty()) {
+    if (opt.isSet("help") || args.isEmpty()) { // NON-NLS
       opt.usage();
       return;
     }
 
-    GuiExecutor.instance().execute(() -> patientCommand(opt, args.get(0)));
+    GuiExecutor.execute(() -> patientCommand(opt, args.getFirst()));
   }
 
   private void patientCommand(Option opt, String arg) {
 
     final Document newPatientContext;
 
-    if (opt.isSet("xml")) {
+    if (opt.isSet("xml")) { // NON-NLS
       newPatientContext = getPatientContext(arg, OPT_NONE);
     } else if (opt.isSet("inbound")) { // NON-NLS
       newPatientContext = getPatientContext(arg, OPT_B64ZIP);
@@ -530,6 +530,7 @@ public class AcquireManager {
     if (tag instanceof TagSeq && node.hasChildNodes()) {
       NodeList nodeList = node.getChildNodes();
       Attributes attributes = new Attributes();
+      attributes.setString(Tag.SpecificCharacterSet, VR.CS, "ISO_IR 192"); // NON-NLS
       // FIXME handle only one sequence element
       Attributes[] list = new Attributes[1];
       for (int i = 0; i < nodeList.getLength(); i++) {
@@ -559,7 +560,7 @@ public class AcquireManager {
       } else {
         if (!isAcquireImagesAllPublished()
             && JOptionPane.showConfirmDialog(
-                    getExplorerViewComponent(),
+                    WinUtil.getValidComponent(getExplorerViewComponent()),
                     Messages.getString("AcquireManager.new_patient_load_warn"),
                     Messages.getString("AcquireManager.new_patient_load_title"),
                     JOptionPane.OK_CANCEL_OPTION,
@@ -586,7 +587,7 @@ public class AcquireManager {
     return Optional.ofNullable(acquireExplorer)
         .map(AcquireExplorer::getCentralPane)
         .map(Component.class::cast)
-        .orElse(UIManager.getApplicationWindow());
+        .orElse(GuiUtils.getUICore().getApplicationWindow());
   }
 
   public AcquireExplorer getAcquireExplorer() {
@@ -697,8 +698,7 @@ public class AcquireManager {
     try {
       URL url = Objects.requireNonNull(uri).toURL();
       LOGGER.debug("Download from URL: {}", url);
-      ClosableURLConnection urlConnection =
-          NetworkUtil.getUrlConnection(url, new URLParameters(BundleTools.SESSION_TAGS_FILE));
+      ClosableURLConnection urlConnection = NetworkUtil.getUrlConnection(url, new URLParameters());
       // note: fastest way to convert inputStream to string according to :
       // http://stackoverflow.com/questions/309424/read-convert-an-inputstream-to-a-string
       try (InputStream inputStream = urlConnection.getInputStream()) {
