@@ -36,6 +36,7 @@ import java.util.Set;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.FutureTask;
+import java.util.function.Function;
 import javax.swing.Action;
 import javax.swing.BorderFactory;
 import javax.swing.ButtonGroup;
@@ -62,6 +63,7 @@ import org.weasis.core.api.gui.Insertable;
 import org.weasis.core.api.gui.util.ActionW;
 import org.weasis.core.api.gui.util.GuiExecutor;
 import org.weasis.core.api.gui.util.GuiUtils;
+import org.weasis.core.api.media.data.MediaElement;
 import org.weasis.core.api.media.data.MediaSeries;
 import org.weasis.core.api.media.data.MediaSeriesGroup;
 import org.weasis.core.api.media.data.MediaSeriesGroupNode;
@@ -69,12 +71,11 @@ import org.weasis.core.api.media.data.Series;
 import org.weasis.core.api.media.data.SeriesThumbnail;
 import org.weasis.core.api.media.data.TagW;
 import org.weasis.core.api.media.data.Thumbnail;
-import org.weasis.core.api.service.BundleTools;
 import org.weasis.core.api.util.FontItem;
 import org.weasis.core.api.util.ResourceUtil;
 import org.weasis.core.api.util.ResourceUtil.OtherIcon;
+import org.weasis.core.api.util.ResourceUtil.ResourceIconPath;
 import org.weasis.core.ui.docking.PluginTool;
-import org.weasis.core.ui.docking.UIManager;
 import org.weasis.core.ui.editor.SeriesViewer;
 import org.weasis.core.ui.editor.SeriesViewerEvent;
 import org.weasis.core.ui.editor.SeriesViewerEvent.EVENT;
@@ -87,7 +88,9 @@ import org.weasis.core.ui.util.ArrayListComboBoxModel;
 import org.weasis.core.ui.util.DefaultAction;
 import org.weasis.core.ui.util.TitleMenuItem;
 import org.weasis.core.ui.util.WrapLayout;
+import org.weasis.dicom.codec.DicomImageElement;
 import org.weasis.dicom.codec.DicomSpecialElement;
+import org.weasis.dicom.codec.HiddenSeriesManager;
 import org.weasis.dicom.codec.KOSpecialElement;
 import org.weasis.dicom.codec.TagD;
 import org.weasis.dicom.codec.TagD.Level;
@@ -97,6 +100,13 @@ import org.weasis.dicom.explorer.wado.LoadSeries;
 public class DicomExplorer extends PluginTool implements DataExplorerView, SeriesViewerListener {
 
   private static final org.slf4j.Logger LOGGER = LoggerFactory.getLogger(DicomExplorer.class);
+
+  public enum ListPosition {
+    FIRST,
+    PREVIOUS,
+    NEXT,
+    LAST
+  }
 
   public static final String NAME = Messages.getString("DicomExplorer.title");
   public static final String PREFERENCE_NODE = "dicom.explorer";
@@ -121,17 +131,6 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       new ArrayListComboBoxModel<>(DicomSorter.STUDY_COMPARATOR);
   private final JComboBox<?> patientCombobox = new JComboBox<>(modelPatient);
   private final JComboBox<?> studyCombobox = new JComboBox<>(modelStudy);
-  private final transient ItemListener patientChangeListener =
-      e -> {
-        if (e.getStateChange() == ItemEvent.SELECTED) {
-          Object item = modelPatient.getSelectedItem();
-          if (item instanceof MediaSeriesGroupNode patient) {
-            selectPatient(patient);
-          }
-          selectedPatient.revalidate();
-          selectedPatient.repaint();
-        }
-      };
   private final transient ItemListener studyItemListener =
       e -> {
         if (e.getStateChange() == ItemEvent.SELECTED) {
@@ -155,10 +154,20 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     this.model = model == null ? new DicomModel() : model;
     this.selectionList = new SeriesSelectionModel(selectedPatient);
     int thumbnailSize =
-        BundleTools.SYSTEM_PREFERENCES.getIntProperty(Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
+        GuiUtils.getUICore()
+            .getSystemPreferences()
+            .getIntProperty(Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
     setDockableWidth(Math.max(thumbnailSize, Thumbnail.DEFAULT_SIZE) + 42);
 
     patientCombobox.setMaximumRowCount(15);
+    ItemListener patientChangeListener =
+        e -> {
+          if (e.getStateChange() == ItemEvent.SELECTED) {
+            selectPatient(getSelectedPatient());
+            selectedPatient.revalidate();
+            selectedPatient.repaint();
+          }
+        };
     patientCombobox.addItemListener(patientChangeListener);
     studyCombobox.setMaximumRowCount(15);
     // do not use addElement
@@ -204,7 +213,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     MediaSeriesGroup patient = model.getParent(study, DicomModel.patient);
     List<StudyPane> studies = patient2study.get(patient);
     if (studies != null) {
-      for (int i = 0; i < studies.size(); i++) {
+      for (int i = studies.size() - 1; i >= 0; i--) {
         StudyPane st = studies.get(i);
         if (st.isStudy(study)) {
           studies.remove(i);
@@ -232,7 +241,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     MediaSeriesGroup study = model.getParent(series, DicomModel.study);
     List<SeriesPane> seriesList = study2series.get(study);
     if (seriesList != null) {
-      for (int j = 0; j < seriesList.size(); j++) {
+      for (int j = seriesList.size() - 1; j >= 0; j--) {
         SeriesPane se = seriesList.get(j);
         if (se.isSeries(series)) {
           seriesList.remove(j);
@@ -311,6 +320,251 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       }
     }
     return null;
+  }
+
+  private MediaSeriesGroupNode getPatient(Object item) {
+    if (item instanceof MediaSeriesGroupNode patient) {
+      return patient;
+    }
+    return null;
+  }
+
+  public MediaSeriesGroupNode getSelectedPatient() {
+    return getPatient(modelPatient.getSelectedItem());
+  }
+
+  public MediaSeries<? extends MediaElement> movePatient(
+      ViewCanvas<DicomImageElement> view, ListPosition position) {
+    if (view != null) {
+      MediaSeriesGroup patientGroup;
+      MediaSeriesGroup seriesGroup;
+      MediaSeriesGroup series = view.getSeries();
+      if (series == null) {
+        seriesGroup = getSeries(null, null, ListPosition.FIRST);
+      } else {
+        MediaSeriesGroup studyGroup = model.getParent(series, DicomModel.study);
+        patientGroup = model.getParent(studyGroup, DicomModel.patient);
+        seriesGroup = getSeriesGroupFromPatient(patientGroup, position);
+      }
+
+      if (seriesGroup instanceof MediaSeries<?> dicomSeries) {
+        ThumbnailMouseAndKeyAdapter.openSeriesInDefaultPlugin(
+            model, (MediaSeries<? extends MediaElement>) dicomSeries);
+      }
+    }
+    return null;
+  }
+
+  public MediaSeriesGroup getSeriesGroupFromPatient(
+      MediaSeriesGroup patientGroup, ListPosition position) {
+    MediaSeriesGroup seriesGroup;
+    if (patientGroup == null) {
+      seriesGroup = getSeries(null, null, ListPosition.FIRST);
+    } else {
+      MediaSeriesGroup patient = getPatientFromList(patientGroup, position);
+      seriesGroup = getSeries(getFirstStudy(patient), null, ListPosition.FIRST);
+    }
+    return seriesGroup;
+  }
+
+  private MediaSeriesGroup getPatientFromList(
+      MediaSeriesGroup patientGroup, ListPosition position) {
+    if (patientGroup == null) {
+      return getSelectedPatient();
+    } else {
+      if (modelPatient.getSize() > 0) {
+        int index = 0;
+        if (position == ListPosition.LAST) {
+          index = modelPatient.getSize() - 1;
+        } else if (position == ListPosition.PREVIOUS) {
+          index = getPatientIndex(patientGroup) - 1;
+        } else if (position == ListPosition.NEXT) {
+          index = getPatientIndex(patientGroup) + 1;
+        }
+        if (index >= 0 && index < modelPatient.getSize()) {
+          Object object = modelPatient.getElementAt(index);
+          if (object instanceof MediaSeriesGroupNode patient) {
+            return patient;
+          }
+        }
+      }
+    }
+    return null;
+  }
+
+  private int getPatientIndex(MediaSeriesGroup patientGroup) {
+    if (patientGroup != null) {
+      synchronized (modelPatient) {
+        for (int i = 0; i < modelPatient.getSize(); i++) {
+          if (patientGroup.equals(modelPatient.getElementAt(i))) {
+            return i;
+          }
+        }
+      }
+    }
+    return 0;
+  }
+
+  private MediaSeriesGroup getFirstStudy(MediaSeriesGroup patientGroup) {
+    List<StudyPane> studyList = getStudyList(patientGroup);
+    if (studyList != null && !studyList.isEmpty()) {
+      return studyList.getFirst().dicomStudy;
+    }
+    return null;
+  }
+
+  public MediaSeries<? extends MediaElement> moveStudy(
+      ViewCanvas<DicomImageElement> view, ListPosition position) {
+    if (view != null) {
+      MediaSeriesGroup seriesGroup;
+      MediaSeriesGroup series = view.getSeries();
+      if (series == null) {
+        seriesGroup = getSeries(null, null, ListPosition.FIRST);
+      } else {
+        seriesGroup = getSeriesGroupFromStudy(model.getParent(series, DicomModel.study), position);
+      }
+      return displaySeries(view, seriesGroup);
+    }
+    return null;
+  }
+
+  public MediaSeriesGroup getSeriesGroupFromStudy(
+      MediaSeriesGroup studyGroup, ListPosition position) {
+    MediaSeriesGroup seriesGroup;
+    if (studyGroup == null) {
+      seriesGroup = getSeries(null, null, ListPosition.FIRST);
+    } else {
+      MediaSeriesGroup study = getStudyFromList(studyGroup, position);
+      seriesGroup = getSeries(study, null, ListPosition.FIRST);
+    }
+    return seriesGroup;
+  }
+
+  private List<StudyPane> getStudyList(MediaSeriesGroup patient) {
+    MediaSeriesGroupNode patientNode = getPatient(patient);
+    if (patient == null) {
+      patientNode = getSelectedPatient();
+    }
+    return patient2study.get(patientNode);
+  }
+
+  private MediaSeriesGroup getStudyFromList(MediaSeriesGroup studyGroup, ListPosition position) {
+    MediaSeriesGroup patientGroup = model.getParent(studyGroup, DicomModel.patient);
+    if (patientGroup == null || studyGroup == null) {
+      return getFirstStudy(patientGroup);
+    } else {
+      List<StudyPane> studyPanes = patient2study.get(patientGroup);
+      if (studyPanes != null && !studyPanes.isEmpty()) {
+        int index = 0;
+        if (position == ListPosition.LAST) {
+          index = studyPanes.size() - 1;
+        } else if (position == ListPosition.PREVIOUS) {
+          index = getStudyIndex(studyPanes, studyGroup) - 1;
+        } else if (position == ListPosition.NEXT) {
+          index = getStudyIndex(studyPanes, studyGroup) + 1;
+        }
+        if (index >= 0 && index < studyPanes.size()) {
+          return studyPanes.get(index).dicomStudy;
+        }
+      }
+    }
+    return null;
+  }
+
+  private int getStudyIndex(List<StudyPane> seriesList, MediaSeriesGroup studyGroup) {
+    if (seriesList != null && !seriesList.isEmpty()) {
+      for (int i = 0; i < seriesList.size(); i++) {
+        StudyPane se = seriesList.get(i);
+        if (se.isStudy(studyGroup)) {
+          return i;
+        }
+      }
+    }
+    return 0;
+  }
+
+  public MediaSeries<? extends MediaElement> moveSeries(
+      ViewCanvas<DicomImageElement> view, ListPosition position) {
+    if (view != null) {
+      MediaSeriesGroup seriesGroup = getSeriesGroup(view.getSeries(), position);
+      return displaySeries(view, seriesGroup);
+    }
+    return null;
+  }
+
+  private MediaSeries<? extends MediaElement> displaySeries(
+      ViewCanvas<DicomImageElement> view, MediaSeriesGroup seriesGroup) {
+    if (view != null && seriesGroup instanceof MediaSeries<?> dicomSeries) {
+      view.setSeries(null);
+      view.setSeries((MediaSeries<DicomImageElement>) dicomSeries, null);
+      return (MediaSeries<? extends MediaElement>) dicomSeries;
+    }
+    return null;
+  }
+
+  public MediaSeriesGroup getSeriesGroup(MediaSeriesGroup series, ListPosition position) {
+    MediaSeriesGroup seriesGroup;
+    if (series == null) {
+      seriesGroup = getSeries(null, null, position);
+    } else {
+      MediaSeriesGroup studyGroup = model.getParent(series, DicomModel.study);
+      seriesGroup = getSeries(studyGroup, series, position);
+    }
+    return seriesGroup;
+  }
+
+  private MediaSeriesGroup getSeries(
+      MediaSeriesGroup studyGroup, MediaSeriesGroup series, ListPosition position) {
+    if (studyGroup == null || series == null) {
+      List<StudyPane> studyList;
+      if (studyGroup == null) {
+        studyList = getStudyList(null);
+      } else {
+        return getSeriesFromList(studyGroup, null, ListPosition.FIRST);
+      }
+      if (studyList != null) {
+        for (StudyPane studyPane : studyList) {
+          List<SeriesPane> seriesList = study2series.get(studyPane.dicomStudy);
+          if (seriesList != null && !seriesList.isEmpty()) {
+            return seriesList.getFirst().sequence;
+          }
+        }
+      }
+    } else {
+      return getSeriesFromList(studyGroup, series, position);
+    }
+    return null;
+  }
+
+  private MediaSeriesGroup getSeriesFromList(
+      MediaSeriesGroup studyGroup, MediaSeriesGroup series, ListPosition position) {
+    List<SeriesPane> seriesList = study2series.get(studyGroup);
+    if (seriesList != null && !seriesList.isEmpty()) {
+      int index = 0;
+      if (position == ListPosition.LAST) {
+        index = seriesList.size() - 1;
+      } else if (position == ListPosition.PREVIOUS) {
+        index = getSeriesIndex(seriesList, series) - 1;
+      } else if (position == ListPosition.NEXT) {
+        index = getSeriesIndex(seriesList, series) + 1;
+      }
+      if (index >= 0 && index < seriesList.size()) {
+        return seriesList.get(index).sequence;
+      }
+    }
+    return null;
+  }
+
+  private int getSeriesIndex(List<SeriesPane> seriesList, MediaSeriesGroup series) {
+    if (seriesList != null && !seriesList.isEmpty()) {
+      for (int i = 0; i < seriesList.size(); i++) {
+        SeriesPane se = seriesList.get(i);
+        if (se.isSeries(series)) {
+          return i;
+        }
+      }
+    }
+    return 0;
   }
 
   private synchronized SeriesPane createSeriesPaneInstance(
@@ -398,8 +652,8 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     private void refreshLayout() {
       this.setLayout(
           verticalLayout
-              ? new MigLayout("fillx, flowy, insets 0", "[fill]")
-              : new MigLayout("fillx, flowx, insets 0", "[fill]"));
+              ? new MigLayout("fillx, flowy, insets 0", "[fill]") // NON-NLS
+              : new MigLayout("fillx, flowx, insets 0", "[fill]")); // NON-NLS
       List<StudyPane> studies = getStudyPaneList();
       super.removeAll();
       for (StudyPane studyPane : studies) {
@@ -444,7 +698,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     private final TitledBorder title;
 
     public StudyPane(MediaSeriesGroup dicomStudy) {
-      super(new MigLayout("fillx, flowy, insets 0", "[fill]"));
+      super(new MigLayout("fillx, flowy, insets 0", "[fill]")); // NON-NLS
       if (dicomStudy == null) {
         throw new IllegalArgumentException("Study cannot be null");
       }
@@ -453,17 +707,33 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       this.setBorder(
           BorderFactory.createCompoundBorder(GuiUtils.getEmptyBorder(0, 3, 0, 3), title));
       this.setFocusable(false);
-      this.add(sub, "shrinky 100");
+      this.add(sub, "shrinky 100"); // NON-NLS
       this.addComponentListener(
           new ComponentAdapter() {
             @Override
             public void componentResized(ComponentEvent e) {
-              WrapLayout wl = (WrapLayout) sub.getLayout();
-              sub.setPreferredSize(wl.preferredLayoutSize(sub));
+              refreshLayout();
               StudyPane.this.revalidate();
               StudyPane.this.getParent().repaint();
             }
           });
+    }
+
+    @Override
+    public void remove(int index) {
+      sub.remove(index);
+      refreshLayout();
+    }
+
+    @Override
+    public void remove(Component comp) {
+      sub.remove(comp);
+      refreshLayout();
+    }
+
+    public void refreshLayout() {
+      WrapLayout wl = (WrapLayout) sub.getLayout();
+      sub.setPreferredSize(wl.preferredLayoutSize(sub));
     }
 
     public boolean isSeriesVisible(MediaSeriesGroup series) {
@@ -494,8 +764,9 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       List<SeriesPane> seriesList = study2series.get(dicomStudy);
       if (seriesList != null) {
         int thumbnailSize =
-            BundleTools.SYSTEM_PREFERENCES.getIntProperty(
-                Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
+            GuiUtils.getUICore()
+                .getSystemPreferences()
+                .getIntProperty(Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
         for (int i = 0; i < seriesList.size(); i++) {
           SeriesPane series = seriesList.get(i);
           series.updateSize(thumbnailSize);
@@ -527,10 +798,12 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
 
     public SeriesPane(MediaSeriesGroup sequence) {
       this.sequence = Objects.requireNonNull(sequence);
-      this.setLayout(new MigLayout("wrap 1", "[center]"));
+      this.setLayout(new MigLayout("wrap 1, insets 0", "[center]")); // NON-NLS
       this.setBackground(FlatUIUtils.getUIColor(SeriesSelectionModel.BACKGROUND, Color.LIGHT_GRAY));
       int thumbnailSize =
-          BundleTools.SYSTEM_PREFERENCES.getIntProperty(Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
+          GuiUtils.getUICore()
+              .getSystemPreferences()
+              .getIntProperty(Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
       if (sequence instanceof Series series) {
         Thumbnail thumb = (Thumbnail) series.getTagValue(TagW.Thumbnail);
         if (thumb == null) {
@@ -610,10 +883,10 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
                 selectedPatient == null ? null : selectedPatient.patient;
             if (patient != null && e.getSource() instanceof JButton button) {
               List<KOSpecialElement> list =
-                  DicomModel.getSpecialElements(patient, KOSpecialElement.class);
+                  HiddenSeriesManager.getHiddenElementsFromPatient(KOSpecialElement.class, patient);
               if (!list.isEmpty()) {
                 if (list.size() == 1) {
-                  model.openRelatedSeries(list.get(0), patient);
+                  model.openRelatedSeries(list.getFirst(), patient);
                 } else {
                   list.sort(DicomSpecialElement.ORDER_BY_DATE);
                   JPopupMenu popupMenu = new JPopupMenu();
@@ -661,7 +934,6 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
   }
 
   public boolean isPatientHasOpenSeries(MediaSeriesGroup patient) {
-
     synchronized (model) {
       for (MediaSeriesGroup study : model.getChildren(patient)) {
         for (MediaSeriesGroup seq : model.getChildren(study)) {
@@ -693,7 +965,8 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       }
       studyCombobox.addItemListener(studyItemListener);
       selectStudy();
-      koOpen.setVisible(DicomModel.hasSpecialElements(patient, KOSpecialElement.class));
+      koOpen.setVisible(
+          HiddenSeriesManager.hasHiddenSpecialElements(KOSpecialElement.class, patient));
       // Send message for selecting related plug-ins window
       model.firePropertyChange(
           new ObservableEvent(ObservableEvent.BasicAction.SELECT, model, null, patient));
@@ -754,7 +1027,9 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     }
     if (repaintStudy) {
       int thumbnailSize =
-          BundleTools.SYSTEM_PREFERENCES.getIntProperty(Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
+          GuiUtils.getUICore()
+              .getSystemPreferences()
+              .getIntProperty(Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
       studyPane.clearAllSeries();
       for (int i = 0, k = 1; i < seriesList.size(); i++) {
         SeriesPane s = seriesList.get(i);
@@ -764,9 +1039,9 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
           k++;
         }
       }
-
       studyPane.revalidate();
       studyPane.repaint();
+      changeToolWindowAnchor(getDockable().getBaseLocation());
     } else {
       int k = 1;
       for (SeriesPane s : seriesList) {
@@ -811,7 +1086,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
   }
 
   private void addDicomSeries(Series<?> series) {
-    if (DicomModel.isSpecialModality(series)) {
+    if (DicomModel.isHiddenModality(series)) {
       // Up to now nothing has to be done in the explorer view about specialModality
       return;
     }
@@ -851,8 +1126,9 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       }
       if (selectedPatient.isStudyVisible(study)) {
         int thumbnailSize =
-            BundleTools.SYSTEM_PREFERENCES.getIntProperty(
-                Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
+            GuiUtils.getUICore()
+                .getSystemPreferences()
+                .getIntProperty(Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
         studyPane.clearAllSeries();
         for (int i = 0; i < seriesList.size(); i++) {
           studyPane.addPane(seriesList.get(i), i, thumbnailSize);
@@ -910,9 +1186,10 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
         if (ObservableEvent.BasicAction.SELECT.equals(action)) {
           if (newVal instanceof Series dcm) {
             MediaSeriesGroup patient = model.getParent(dcm, DicomModel.patient);
-            if (!isSelectedPatient(patient)) {
+            if (!isSelectedPatient(patient) && modelPatient.getIndexOf(patient) >= 0) {
               modelPatient.setSelectedItem(patient);
-              UIManager.DOCKING_CONTROL
+              GuiUtils.getUICore()
+                  .getDockingControl()
                   .getController()
                   .setFocusedDockable(
                       new DefaultFocusRequest(dockable.intern(), this, false, true, false));
@@ -947,7 +1224,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
               MediaSeriesGroup study = model.getParent(dcm, DicomModel.study);
               StudyPane studyPane = getStudyPane(study);
               if (studyPane != null) {
-                if (!DicomModel.isSpecialModality(dcm)) {
+                if (!DicomModel.isHiddenModality(dcm)) {
                   SeriesPane pane = getSeriesPane(dcm);
                   if (pane != null) {
                     pane.updateText();
@@ -966,10 +1243,10 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
               updateSplitSeries(series);
             }
           } else if (newVal instanceof KOSpecialElement) {
-            Object item = modelPatient.getSelectedItem();
-            if (item instanceof MediaSeriesGroupNode) {
+            MediaSeriesGroupNode patient = getSelectedPatient();
+            if (patient != null) {
               koOpen.setVisible(
-                  DicomModel.hasSpecialElements((MediaSeriesGroup) item, KOSpecialElement.class));
+                  HiddenSeriesManager.hasHiddenSpecialElements(KOSpecialElement.class, patient));
             }
           }
         } else if (ObservableEvent.BasicAction.LOADING_START.equals(action)) {
@@ -981,16 +1258,17 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
           if (newVal instanceof ExplorerTask) {
             removeTaskToGlobalProgression((ExplorerTask<?, ?>) newVal);
           }
-          Object item = modelPatient.getSelectedItem();
-          if (item instanceof MediaSeriesGroupNode) {
+          MediaSeriesGroupNode patient = getSelectedPatient();
+          if (patient != null) {
             koOpen.setVisible(
-                DicomModel.hasSpecialElements((MediaSeriesGroup) item, KOSpecialElement.class));
+                HiddenSeriesManager.hasHiddenSpecialElements(KOSpecialElement.class, patient));
           }
         }
       } else if (evt.getSource() instanceof SeriesViewer
           && ObservableEvent.BasicAction.SELECT.equals(action)
           && newVal instanceof MediaSeriesGroup patient
-          && !isSelectedPatient(patient)) {
+          && !isSelectedPatient(patient)
+          && modelPatient.getIndexOf(patient) >= 0) {
         modelPatient.setSelectedItem(patient);
         // focus get back to viewer
         if (evt.getSource() instanceof ViewerPlugin viewerPlugin) {
@@ -1043,32 +1321,31 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
   }
 
   public synchronized void addTaskToGlobalProgression(final ExplorerTask task) {
-    GuiExecutor.instance()
-        .invokeAndWait(
-            () -> {
-              loadingPanel.addTask(task);
-              revalidate();
-              repaint();
-            });
+    GuiExecutor.invokeAndWait(
+        () -> {
+          loadingPanel.addTask(task);
+          revalidate();
+          repaint();
+        });
   }
 
   public synchronized void removeTaskToGlobalProgression(final ExplorerTask task) {
-    GuiExecutor.instance()
-        .invokeAndWait(
-            () -> {
-              if (loadingPanel.removeTask(task)) {
-                revalidate();
-                repaint();
-              }
-            });
+    GuiExecutor.invokeAndWait(
+        () -> {
+          if (loadingPanel.removeTask(task)) {
+            revalidate();
+            repaint();
+          }
+        });
   }
 
   public static SeriesThumbnail createThumbnail(
-      final Series series, final DicomModel dicomModel, final int thumbnailSize) {
+      final Series<?> series, final DicomModel dicomModel, final int thumbnailSize) {
 
     Callable<SeriesThumbnail> callable =
         () -> {
-          final SeriesThumbnail thumb = new SeriesThumbnail(series, thumbnailSize);
+          Function<String, Set<ResourceIconPath>> drawIcons = HiddenSeriesManager::getRelatedIcons;
+          final SeriesThumbnail thumb = new SeriesThumbnail(series, thumbnailSize, drawIcons);
           if (series.getSeriesLoader() instanceof LoadSeries loader) {
             // In case series is downloaded or canceled
             thumb.setProgressBar(loader.isDone() ? null : loader.getProgressBar());
@@ -1081,7 +1358,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
           return thumb;
         };
     FutureTask<SeriesThumbnail> future = new FutureTask<>(callable);
-    GuiExecutor.instance().invokeAndWait(future);
+    GuiExecutor.invokeAndWait(future);
     SeriesThumbnail result = null;
     try {
       result = future.get();
