@@ -32,11 +32,12 @@ import org.weasis.core.api.explorer.ObservableEvent;
 import org.weasis.core.api.gui.task.CircularProgressBar;
 import org.weasis.core.api.gui.util.AppProperties;
 import org.weasis.core.api.gui.util.GuiExecutor;
+import org.weasis.core.api.gui.util.GuiUtils;
+import org.weasis.core.api.gui.util.WinUtil;
 import org.weasis.core.api.media.data.MediaSeriesGroup;
 import org.weasis.core.api.media.data.MediaSeriesGroupNode;
 import org.weasis.core.api.media.data.Series;
 import org.weasis.core.api.media.data.TagW;
-import org.weasis.core.api.service.BundleTools;
 import org.weasis.core.api.util.ResourceUtil;
 import org.weasis.core.api.util.URLParameters;
 import org.weasis.core.util.FileUtil;
@@ -104,18 +105,16 @@ public class RetrieveTask extends ExplorerTask<ExplorerTask<Boolean, String>, St
     DicomProgress progress = new DicomProgress();
     progress.addProgressListener(
         p ->
-            GuiExecutor.instance()
-                .execute(
-                    () -> {
-                      int c =
-                          p.getNumberOfCompletedSuboperations()
-                              + p.getNumberOfFailedSuboperations();
-                      int r = p.getNumberOfRemainingSuboperations();
-                      int t = c + r;
-                      if (t > 0) {
-                        progressBar.setValue((c * 100) / t);
-                      }
-                    }));
+            GuiExecutor.execute(
+                () -> {
+                  int c =
+                      p.getNumberOfCompletedSuboperations() + p.getNumberOfFailedSuboperations();
+                  int r = p.getNumberOfRemainingSuboperations();
+                  int t = c + r;
+                  if (t > 0) {
+                    progressBar.setValue((c * 100) / t);
+                  }
+                }));
 
     addCancelListener(progress);
 
@@ -285,11 +284,13 @@ public class RetrieveTask extends ExplorerTask<ExplorerTask<Boolean, String>, St
       final String errorTitle =
           StringUtil.getEmptyStringIfNull(
               dicomQrView.getComboDicomRetrieveType().getSelectedItem());
-      GuiExecutor.instance()
-          .execute(
-              () ->
-                  JOptionPane.showMessageDialog(
-                      dicomQrView, mes, errorTitle, JOptionPane.ERROR_MESSAGE));
+      GuiExecutor.execute(
+          () ->
+              JOptionPane.showMessageDialog(
+                  WinUtil.getValidComponent(dicomQrView),
+                  mes,
+                  errorTitle,
+                  JOptionPane.ERROR_MESSAGE));
     }
 
     return loadingTask;
@@ -329,34 +330,35 @@ public class RetrieveTask extends ExplorerTask<ExplorerTask<Boolean, String>, St
       }
     }
     if (wadoURLs.isEmpty()) {
-      GuiExecutor.instance()
-          .execute(
-              () ->
-                  JOptionPane.showMessageDialog(
-                      dicomQrView, message1, null, JOptionPane.ERROR_MESSAGE));
+      GuiExecutor.execute(
+          () ->
+              JOptionPane.showMessageDialog(
+                  WinUtil.getValidComponent(dicomQrView),
+                  message1,
+                  null,
+                  JOptionPane.ERROR_MESSAGE));
       return null;
     } else if (wadoURLs.size() > 1) {
-      GuiExecutor.instance()
-          .invokeAndWait(
-              () -> {
-                Object[] options = wadoURLs.toArray();
-                Object response =
-                    JOptionPane.showInputDialog(
-                        dicomQrView,
-                        Messages.getString("RetrieveTask.several_wado_urls"),
-                        wadoURLs.get(0).getWebType().toString(),
-                        JOptionPane.QUESTION_MESSAGE,
-                        null,
-                        options,
-                        options[0]);
+      GuiExecutor.invokeAndWait(
+          () -> {
+            Object[] options = wadoURLs.toArray();
+            Object response =
+                JOptionPane.showInputDialog(
+                    WinUtil.getValidComponent(dicomQrView),
+                    Messages.getString("RetrieveTask.several_wado_urls"),
+                    wadoURLs.getFirst().getWebType().toString(),
+                    JOptionPane.QUESTION_MESSAGE,
+                    null,
+                    options,
+                    options[0]);
 
-                if (response != null) {
-                  wadoURLs.clear();
-                  wadoURLs.add((DicomWebNode) response);
-                }
-              });
+            if (response != null) {
+              wadoURLs.clear();
+              wadoURLs.add((DicomWebNode) response);
+            }
+          });
     }
-    return wadoURLs.get(0);
+    return wadoURLs.getFirst();
   }
 
   static String getHostname(String host) {
@@ -380,8 +382,9 @@ public class RetrieveTask extends ExplorerTask<ExplorerTask<Boolean, String>, St
 
     Map<String, LoadSeries> loadMap = new HashMap<>();
     boolean startDownloading =
-        BundleTools.SYSTEM_PREFERENCES.getBooleanProperty(
-            DicomExplorerPrefView.DOWNLOAD_IMMEDIATELY, true);
+        GuiUtils.getUICore()
+            .getSystemPreferences()
+            .getBooleanProperty(DicomExplorerPrefView.DOWNLOAD_IMMEDIATELY, true);
 
     WadoParameters wadoParameters = new WadoParameters("", true, true);
 
@@ -440,7 +443,7 @@ public class RetrieveTask extends ExplorerTask<ExplorerTask<Boolean, String>, St
 
       // Sort tasks from the download priority order (low number has a higher priority), TASKS
       // is sorted from low to high priority.
-      DownloadManager.TASKS.sort(Collections.reverseOrder(new PriorityTaskComparator()));
+      DownloadManager.getTasks().sort(Collections.reverseOrder(new PriorityTaskComparator()));
 
       DownloadManager.CONCURRENT_EXECUTOR.prestartAllCoreThreads();
     }
@@ -478,7 +481,7 @@ public class RetrieveTask extends ExplorerTask<ExplorerTask<Boolean, String>, St
     return null;
   }
 
-  private Series getSeries(
+  private DicomSeries getSeries(
       MediaSeriesGroup study,
       final Attributes seriesDataset,
       Map<String, LoadSeries> loadMap,
@@ -489,7 +492,7 @@ public class RetrieveTask extends ExplorerTask<ExplorerTask<Boolean, String>, St
       throw new IllegalArgumentException("seriesDataset cannot be null");
     }
     String seriesUID = seriesDataset.getString(Tag.SeriesInstanceUID);
-    Series dicomSeries = (Series) explorerDcmModel.getHierarchyNode(study, seriesUID);
+    DicomSeries dicomSeries = (DicomSeries) explorerDcmModel.getHierarchyNode(study, seriesUID);
     if (dicomSeries == null) {
       dicomSeries = new DicomSeries(seriesUID);
       dicomSeries.setTag(TagD.get(Tag.SeriesInstanceUID), seriesUID);
@@ -519,8 +522,9 @@ public class RetrieveTask extends ExplorerTask<ExplorerTask<Boolean, String>, St
               dicomSeries,
               explorerDcmModel,
               dicomQrView.getAuthMethod(),
-              BundleTools.SYSTEM_PREFERENCES.getIntProperty(
-                  LoadSeries.CONCURRENT_DOWNLOADS_IN_SERIES, 4),
+              GuiUtils.getUICore()
+                  .getSystemPreferences()
+                  .getIntProperty(LoadSeries.CONCURRENT_DOWNLOADS_IN_SERIES, 4),
               true,
               startDownloading);
       loadSeries.setPriority(
